# src/routes/consultation/consultation.js
@@ -29,13 +29,13 @@ const uploadImageConsultation = multer({
   limits: { fileSize: 5 * 1024 * 1024 },
 });
 
-// router.use(verifyToken);
+router.use(verifyToken);
 
 router.get("/room/readyToAssign", consultation.readyToAssign);
 
 router.post("/room", consultation.createRoom);
 
-router.get("/room/user", verifyToken, consultation.getRoomByUserDoctor);
+router.get("/room/user", consultation.getRoomByUserDoctor);
 router.get("/room/user/:id", consultation.getRoomByUser);
 router.get("/room/:id", consultation.getByRoomId);
 router.put("/room/:id/join", consultation.assignDoctor);
@@ -53,5 +53,6 @@ router.get("/room/:id/media", consultation.getMediaByRoomId);
 
 router.post("/room/:id/prescription", consultation.addPrescription);
 router.get("/room/:id/prescriptions", consultation.getPrescriptionByRoomId);
+router.get("/room/:id/allPrescriptionByOutlet", consultation.getAllPrescriptionByOutlet);
 
 module.exports = router;
